--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "chai": "^4.3.4",
     "concurrently": "^6.2.1",
+    "cors": "^2.8.5",
     "mocha": "8.3.2",
     "nock": "^13.1.3",
     "supertest": "^6.1.6"
